bottom link fix

--- a/more.html
+++ b/more.html
@@ -2,7 +2,7 @@
 layout: default
 title: "What Makes a Great Website? " 
 permalink: more.html
-link: /pricing.html
+link: pricing.html
 linktext: Even More Info
 ---
 
